# voxlink

./: .gitignore  PKGBUILD  PRD.md  README.md  config.toml.example  install.sh  pyproject.toml  voxlink.spec
.github/: FUNDING.yml
resources/: voxlink.desktop
src/voxlink/: __init__.py  __main__.py  app.py  config.py
src/voxlink/audio/: __init__.py  capture.py  devices.py  playback.py
src/voxlink/mumble/: __init__.py  client.py  events.py
src/voxlink/shortcuts/: __init__.py  evdev.py  manager.py  portal.py
src/voxlink/ui/: channel_tree.py  compact_overlay.py  main_window.py  settings.py  status_bar.py  tray.py
tests/: test_config.py  test_devices.py  test_integration.py  test_shortcuts.py
